# keep-it-short

./: LICENSE  README.md  pyproject.toml
src/: crud.py  database.py  main.py  models.py  schemas.py
